# test

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE  main.go
cmd/plugin/: plugin.go
hack/: image-push.sh
rpm/: BUILD.bazel  repo.yaml
