load("@bazeldnf//:def.bzl", "bazeldnf")
load("@bazeldnf//:deps.bzl", "rpmtree")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer", "container_push", "container_pull")

gazelle(name = "gazelle")

bazeldnf(name = "bazeldnf")




#container_image(
#    name = "app",
#    # References container_pull from WORKSPACE (above)
#    base = "quay.io/kubevirt/virt-launcher:v1.0.0-alpha.0",
#    files = ["//java/com/example/app:Hello_deploy.jar"],
#    cmd = ["Hello_deploy.jar"]
#)

config_setting(
    name = "arm_build",
    values = {"cpu": "arm"},
)

container_image(
    name = "image",
    directory = "/",
    base = select({
        ":arm_build": "@baseimg-aarch64//image",
        "//conditions:default": "@baseimg-amd64//image",
    }),
    tars = select({
        ":arm_build": [
            "//rpm:qemu-kvm-aarch64",
        ],
        "//conditions:default": [
            "//rpm:qemu-kvm-x86_64",
        ],
    }),
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "$(TARGET_REGISTRY)",
    repository = "$(TARGET_REPOSITORY)",
    tag = "$(TARGET_TAG)-$(ARCH)",
#    registry = "hub.expvent.com.cn:1111",
#    repository = "public/test-virtlauncher",
#    tag = "v0.0.1",
)