load("@bazeldnf//:deps.bzl", "rpm", "rpmtree", "tar2files")
load("@bazeldnf//:def.bzl", "bazeldnf")

rpmtree(
    name = "qemu-kvm-aarch64",
    rpms = [
        "@acl-0__2.2.53-1.el8.aarch64//rpm",
        "@audit-libs-0__3.0.7-4.el8.aarch64//rpm",
        "@basesystem-0__11-5.el8.aarch64//rpm",
        "@bash-0__4.4.20-4.el8.aarch64//rpm",
        "@boost-atomic-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-chrono-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-date-time-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-iostreams-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-program-options-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-random-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-regex-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-system-0__1.66.0-13.el8.aarch64//rpm",
        "@boost-thread-0__1.66.0-13.el8.aarch64//rpm",
        "@bzip2-libs-0__1.0.6-26.el8.aarch64//rpm",
        "@ca-certificates-0__2022.2.54-80.2.el8.aarch64//rpm",
        "@centos-gpg-keys-1__8-6.el8.aarch64//rpm",
        "@centos-stream-release-0__8.6-1.el8.aarch64//rpm",
        "@centos-stream-repos-0__8-6.el8.aarch64//rpm",
        "@chkconfig-0__1.19.1-1.el8.aarch64//rpm",
        "@coreutils-0__8.30-15.el8.aarch64//rpm",
        "@coreutils-common-0__8.30-15.el8.aarch64//rpm",
        "@cracklib-0__2.9.6-15.el8.aarch64//rpm",
        "@cracklib-dicts-0__2.9.6-15.el8.aarch64//rpm",
        "@crypto-policies-0__20221215-1.gitece0092.el8.aarch64//rpm",
        "@crypto-policies-scripts-0__20221215-1.gitece0092.el8.aarch64//rpm",
        "@cryptsetup-libs-0__2.3.7-5.el8.aarch64//rpm",
        "@cyrus-sasl-lib-0__2.1.27-6.el8_5.aarch64//rpm",
        "@dbus-1__1.12.8-24.el8.aarch64//rpm",
        "@dbus-common-1__1.12.8-24.el8.aarch64//rpm",
        "@dbus-daemon-1__1.12.8-24.el8.aarch64//rpm",
        "@dbus-libs-1__1.12.8-24.el8.aarch64//rpm",
        "@dbus-tools-1__1.12.8-24.el8.aarch64//rpm",
        "@device-mapper-8__1.02.181-9.el8.aarch64//rpm",
        "@device-mapper-libs-8__1.02.181-9.el8.aarch64//rpm",
        "@device-mapper-multipath-libs-0__0.8.4-39.el8.aarch64//rpm",
        "@edk2-aarch64-0__20220126gitbb1bba3d77-5.el8.aarch64//rpm",
        "@elfutils-default-yama-scope-0__0.189-2.el8.aarch64//rpm",
        "@elfutils-libelf-0__0.189-2.el8.aarch64//rpm",
        "@elfutils-libs-0__0.189-2.el8.aarch64//rpm",
        "@expat-0__2.2.5-11.el8.aarch64//rpm",
        "@filesystem-0__3.8-6.el8.aarch64//rpm",
        "@gawk-0__4.2.1-4.el8.aarch64//rpm",
        "@gdbm-1__1.18-2.el8.aarch64//rpm",
        "@gdbm-libs-1__1.18-2.el8.aarch64//rpm",
        "@glib2-0__2.56.4-161.el8.aarch64//rpm",
        "@glibc-0__2.28-208.el8.aarch64//rpm",
        "@glibc-common-0__2.28-208.el8.aarch64//rpm",
        "@glibc-langpack-cv-0__2.28-208.el8.aarch64//rpm",
        "@gmp-1__6.1.2-10.el8.aarch64//rpm",
        "@gnutls-0__3.6.16-6.el8.aarch64//rpm",
        "@grep-0__3.1-6.el8.aarch64//rpm",
        "@gzip-0__1.9-13.el8.aarch64//rpm",
        "@info-0__6.5-7.el8_5.aarch64//rpm",
        "@json-c-0__0.13.1-3.el8.aarch64//rpm",
        "@keyutils-libs-0__1.5.10-9.el8.aarch64//rpm",
        "@kmod-libs-0__25-19.el8.aarch64//rpm",
        "@krb5-libs-0__1.18.2-22.el8.aarch64//rpm",
        "@libacl-0__2.2.53-1.el8.aarch64//rpm",
        "@libaio-0__0.3.112-1.el8.aarch64//rpm",
        "@libattr-0__2.4.48-3.el8.aarch64//rpm",
        "@libblkid-0__2.32.1-41.el8.aarch64//rpm",
        "@libcap-0__2.48-4.el8.aarch64//rpm",
        "@libcap-ng-0__0.7.11-1.el8.aarch64//rpm",
        "@libcom_err-0__1.45.6-5.el8.aarch64//rpm",
        "@libcurl-minimal-0__7.61.1-30.el8.aarch64//rpm",
        "@libdb-0__5.3.28-42.el8_4.aarch64//rpm",
        "@libfdisk-0__2.32.1-41.el8.aarch64//rpm",
        "@libfdt-0__1.6.0-1.el8.aarch64//rpm",
        "@libffi-0__3.1-24.el8.aarch64//rpm",
        "@libgcc-0__8.5.0-19.el8.aarch64//rpm",
        "@libgcrypt-0__1.8.5-7.el8.aarch64//rpm",
        "@libgpg-error-0__1.31-1.el8.aarch64//rpm",
        "@libibverbs-0__44.0-2.el8.1.aarch64//rpm",
        "@libicu-0__60.3-2.el8_1.aarch64//rpm",
        "@libidn2-0__2.2.0-1.el8.aarch64//rpm",
        "@libiscsi-0__1.18.0-8.module_el8.6.0__plus__983__plus__a7505f3f.aarch64//rpm",
        "@libmount-0__2.32.1-41.el8.aarch64//rpm",
        "@libnghttp2-0__1.33.0-3.el8_2.1.aarch64//rpm",
        "@libnl3-0__3.7.0-1.el8.aarch64//rpm",
        "@libnsl2-0__1.2.0-2.20180605git4a062cf.el8.aarch64//rpm",
        "@libpng-2__1.6.34-5.el8.aarch64//rpm",
        "@libpwquality-0__1.4.4-6.el8.aarch64//rpm",
        "@librados2-1__12.2.7-9.el8.aarch64//rpm",
        "@librbd1-1__12.2.7-9.el8.aarch64//rpm",
        "@librdmacm-0__44.0-2.el8.1.aarch64//rpm",
        "@libseccomp-0__2.5.2-1.el8.aarch64//rpm",
        "@libselinux-0__2.9-8.el8.aarch64//rpm",
        "@libsemanage-0__2.9-9.el8.aarch64//rpm",
        "@libsepol-0__2.9-3.el8.aarch64//rpm",
        "@libsigsegv-0__2.11-5.el8.aarch64//rpm",
        "@libsmartcols-0__2.32.1-41.el8.aarch64//rpm",
        "@libssh-0__0.9.6-6.el8.aarch64//rpm",
        "@libssh-config-0__0.9.6-6.el8.aarch64//rpm",
        "@libstdc__plus____plus__-0__8.5.0-19.el8.aarch64//rpm",
        "@libtasn1-0__4.13-4.el8.aarch64//rpm",
        "@libtirpc-0__1.1.4-8.el8.aarch64//rpm",
        "@libunistring-0__0.9.9-3.el8.aarch64//rpm",
        "@libusbx-0__1.0.23-4.el8.aarch64//rpm",
        "@libutempter-0__1.1.6-14.el8.aarch64//rpm",
        "@libuuid-0__2.32.1-41.el8.aarch64//rpm",
        "@libverto-0__0.3.2-2.el8.aarch64//rpm",
        "@libxcrypt-0__4.1.1-6.el8.aarch64//rpm",
        "@libxkbcommon-0__0.9.1-1.el8.aarch64//rpm",
        "@libzstd-0__1.4.4-1.el8.aarch64//rpm",
        "@lz4-libs-0__1.8.3-3.el8_4.aarch64//rpm",
        "@lzo-0__2.08-14.el8.aarch64//rpm",
        "@mpfr-0__3.1.6-1.el8.aarch64//rpm",
        "@ncurses-0__6.1-9.20180224.el8.aarch64//rpm",
        "@ncurses-base-0__6.1-9.20180224.el8.aarch64//rpm",
        "@ncurses-libs-0__6.1-9.20180224.el8.aarch64//rpm",
        "@nettle-0__3.4.1-7.el8.aarch64//rpm",
        "@nspr-0__4.34.0-3.el8.aarch64//rpm",
        "@nss-0__3.79.0-11.el8.aarch64//rpm",
        "@nss-softokn-0__3.79.0-11.el8.aarch64//rpm",
        "@nss-softokn-freebl-0__3.79.0-11.el8.aarch64//rpm",
        "@nss-sysinit-0__3.79.0-11.el8.aarch64//rpm",
        "@nss-util-0__3.79.0-11.el8.aarch64//rpm",
        "@numactl-libs-0__2.0.12-13.el8.aarch64//rpm",
        "@openssl-libs-1__1.1.1k-9.el8.aarch64//rpm",
        "@p11-kit-0__0.23.22-1.el8.aarch64//rpm",
        "@p11-kit-trust-0__0.23.22-1.el8.aarch64//rpm",
        "@pam-0__1.3.1-25.el8.aarch64//rpm",
        "@pcre-0__8.42-6.el8.aarch64//rpm",
        "@pcre2-0__10.32-3.el8.aarch64//rpm",
        "@pixman-0__0.38.4-2.el8.aarch64//rpm",
        "@platform-python-0__3.6.8-51.el8.aarch64//rpm",
        "@platform-python-setuptools-0__39.2.0-7.el8.aarch64//rpm",
        "@popt-0__1.18-1.el8.aarch64//rpm",
        "@python3-libs-0__3.6.8-51.el8.aarch64//rpm",
        "@python3-pip-wheel-0__9.0.3-22.el8.aarch64//rpm",
        "@python3-setuptools-wheel-0__39.2.0-7.el8.aarch64//rpm",
        "@qemu-img-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-block-curl-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-block-iscsi-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-block-rbd-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-block-ssh-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-common-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-core-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@qemu-kvm-docs-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.aarch64//rpm",
        "@readline-0__7.0-10.el8.aarch64//rpm",
        "@sed-0__4.5-5.el8.aarch64//rpm",
        "@setup-0__2.12.2-9.el8.aarch64//rpm",
        "@shadow-utils-2__4.6-17.el8.aarch64//rpm",
        "@snappy-0__1.1.8-3.el8.aarch64//rpm",
        "@sqlite-libs-0__3.26.0-17.el8.aarch64//rpm",
        "@systemd-0__239-75.el8.aarch64//rpm",
        "@systemd-libs-0__239-75.el8.aarch64//rpm",
        "@systemd-pam-0__239-75.el8.aarch64//rpm",
        "@tzdata-0__2023c-1.el8.aarch64//rpm",
        "@userspace-rcu-0__0.10.1-4.el8.aarch64//rpm",
        "@util-linux-0__2.32.1-41.el8.aarch64//rpm",
        "@xkeyboard-config-0__2.28-1.el8.aarch64//rpm",
        "@xz-libs-0__5.2.4-4.el8.aarch64//rpm",
        "@zlib-0__1.2.11-21.el8.aarch64//rpm",
    ],
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "qemu-kvm-x86_64",
    rpms = [
        "@acl-0__2.2.53-1.el8.x86_64//rpm",
        "@alsa-lib-0__1.2.8-2.el8.x86_64//rpm",
        "@audit-libs-0__3.0.7-4.el8.x86_64//rpm",
        "@basesystem-0__11-5.el8.x86_64//rpm",
        "@bash-0__4.4.20-4.el8.x86_64//rpm",
        "@boost-atomic-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-chrono-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-date-time-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-iostreams-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-program-options-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-random-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-regex-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-system-0__1.66.0-13.el8.x86_64//rpm",
        "@boost-thread-0__1.66.0-13.el8.x86_64//rpm",
        "@bzip2-libs-0__1.0.6-26.el8.x86_64//rpm",
        "@ca-certificates-0__2022.2.54-80.2.el8.x86_64//rpm",
        "@cairo-0__1.15.12-6.el8.x86_64//rpm",
        "@celt051-0__0.5.1.3-15.el8.x86_64//rpm",
        "@centos-gpg-keys-1__8-6.el8.x86_64//rpm",
        "@centos-stream-release-0__8.6-1.el8.x86_64//rpm",
        "@centos-stream-repos-0__8-6.el8.x86_64//rpm",
        "@chkconfig-0__1.19.1-1.el8.x86_64//rpm",
        "@coreutils-single-0__8.30-15.el8.x86_64//rpm",
        "@cracklib-0__2.9.6-15.el8.x86_64//rpm",
        "@cracklib-dicts-0__2.9.6-15.el8.x86_64//rpm",
        "@crypto-policies-0__20221215-1.gitece0092.el8.x86_64//rpm",
        "@crypto-policies-scripts-0__20221215-1.gitece0092.el8.x86_64//rpm",
        "@cryptsetup-libs-0__2.3.7-5.el8.x86_64//rpm",
        "@cyrus-sasl-lib-0__2.1.27-6.el8_5.x86_64//rpm",
        "@daxctl-libs-0__71.1-4.el8.x86_64//rpm",
        "@dbus-1__1.12.8-24.el8.x86_64//rpm",
        "@dbus-common-1__1.12.8-24.el8.x86_64//rpm",
        "@dbus-daemon-1__1.12.8-24.el8.x86_64//rpm",
        "@dbus-libs-1__1.12.8-24.el8.x86_64//rpm",
        "@dbus-tools-1__1.12.8-24.el8.x86_64//rpm",
        "@device-mapper-8__1.02.181-9.el8.x86_64//rpm",
        "@device-mapper-libs-8__1.02.181-9.el8.x86_64//rpm",
        "@device-mapper-multipath-libs-0__0.8.4-39.el8.x86_64//rpm",
        "@edk2-ovmf-0__20220126gitbb1bba3d77-5.el8.x86_64//rpm",
        "@elfutils-default-yama-scope-0__0.189-2.el8.x86_64//rpm",
        "@elfutils-libelf-0__0.189-2.el8.x86_64//rpm",
        "@elfutils-libs-0__0.189-2.el8.x86_64//rpm",
        "@expat-0__2.2.5-11.el8.x86_64//rpm",
        "@filesystem-0__3.8-6.el8.x86_64//rpm",
        "@fontconfig-0__2.13.1-4.el8.x86_64//rpm",
        "@fontpackages-filesystem-0__1.44-22.el8.x86_64//rpm",
        "@freetype-0__2.9.1-9.el8.x86_64//rpm",
        "@fribidi-0__1.0.4-9.el8.x86_64//rpm",
        "@gawk-0__4.2.1-4.el8.x86_64//rpm",
        "@gdbm-1__1.18-2.el8.x86_64//rpm",
        "@gdbm-libs-1__1.18-2.el8.x86_64//rpm",
        "@glib2-0__2.56.4-161.el8.x86_64//rpm",
        "@glibc-0__2.28-208.el8.x86_64//rpm",
        "@glibc-common-0__2.28-208.el8.x86_64//rpm",
        "@glibc-langpack-cs-0__2.28-208.el8.x86_64//rpm",
        "@glusterfs-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-api-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-client-xlators-0__6.0-56.4.el8.x86_64//rpm",
        "@glusterfs-libs-0__6.0-56.4.el8.x86_64//rpm",
        "@gmp-1__6.1.2-10.el8.x86_64//rpm",
        "@gnutls-0__3.6.16-6.el8.x86_64//rpm",
        "@google-noto-fonts-common-0__20161022-7.el8.1.x86_64//rpm",
        "@google-noto-sans-ui-fonts-0__20161022-7.el8.1.x86_64//rpm",
        "@graphite2-0__1.3.10-10.el8.x86_64//rpm",
        "@grep-0__3.1-6.el8.x86_64//rpm",
        "@gstreamer1-0__1.16.1-2.el8.x86_64//rpm",
        "@gstreamer1-plugins-base-0__1.16.1-2.el8.x86_64//rpm",
        "@gzip-0__1.9-13.el8.x86_64//rpm",
        "@harfbuzz-0__1.7.5-3.el8.x86_64//rpm",
        "@hwdata-0__0.314-8.16.el8.x86_64//rpm",
        "@info-0__6.5-7.el8_5.x86_64//rpm",
        "@ipxe-roms-qemu-0__20181214-11.git133f4c47.el8.x86_64//rpm",
        "@iso-codes-0__3.79-2.el8.x86_64//rpm",
        "@json-c-0__0.13.1-3.el8.x86_64//rpm",
        "@keyutils-libs-0__1.5.10-9.el8.x86_64//rpm",
        "@kmod-libs-0__25-19.el8.x86_64//rpm",
        "@krb5-libs-0__1.18.2-22.el8.x86_64//rpm",
        "@libX11-0__1.6.8-5.el8.x86_64//rpm",
        "@libX11-common-0__1.6.8-5.el8.x86_64//rpm",
        "@libX11-xcb-0__1.6.8-5.el8.x86_64//rpm",
        "@libXau-0__1.0.9-3.el8.x86_64//rpm",
        "@libXext-0__1.3.4-1.el8.x86_64//rpm",
        "@libXfixes-0__5.0.3-7.el8.x86_64//rpm",
        "@libXft-0__2.3.3-1.el8.x86_64//rpm",
        "@libXrender-0__0.9.10-7.el8.x86_64//rpm",
        "@libXv-0__1.0.11-7.el8.x86_64//rpm",
        "@libXxf86vm-0__1.1.4-9.el8.x86_64//rpm",
        "@libacl-0__2.2.53-1.el8.x86_64//rpm",
        "@libaio-0__0.3.112-1.el8.x86_64//rpm",
        "@libattr-0__2.4.48-3.el8.x86_64//rpm",
        "@libblkid-0__2.32.1-41.el8.x86_64//rpm",
        "@libcap-0__2.48-4.el8.x86_64//rpm",
        "@libcap-ng-0__0.7.11-1.el8.x86_64//rpm",
        "@libcom_err-0__1.45.6-5.el8.x86_64//rpm",
        "@libcurl-minimal-0__7.61.1-30.el8.x86_64//rpm",
        "@libdatrie-0__0.2.9-7.el8.x86_64//rpm",
        "@libdb-0__5.3.28-42.el8_4.x86_64//rpm",
        "@libdrm-0__2.4.114-1.el8.x86_64//rpm",
        "@libepoxy-0__1.5.8-1.el8.x86_64//rpm",
        "@libfdisk-0__2.32.1-41.el8.x86_64//rpm",
        "@libfdt-0__1.6.0-1.el8.x86_64//rpm",
        "@libffi-0__3.1-24.el8.x86_64//rpm",
        "@libgcc-0__8.5.0-19.el8.x86_64//rpm",
        "@libgcrypt-0__1.8.5-7.el8.x86_64//rpm",
        "@libglvnd-1__1.3.4-1.el8.x86_64//rpm",
        "@libglvnd-egl-1__1.3.4-1.el8.x86_64//rpm",
        "@libglvnd-gles-1__1.3.4-1.el8.x86_64//rpm",
        "@libglvnd-glx-1__1.3.4-1.el8.x86_64//rpm",
        "@libgpg-error-0__1.31-1.el8.x86_64//rpm",
        "@libibverbs-0__44.0-2.el8.1.x86_64//rpm",
        "@libicu-0__60.3-2.el8_1.x86_64//rpm",
        "@libidn2-0__2.2.0-1.el8.x86_64//rpm",
        "@libiscsi-0__1.18.0-8.module_el8.6.0__plus__983__plus__a7505f3f.x86_64//rpm",
        "@libjpeg-turbo-0__1.5.3-12.el8.x86_64//rpm",
        "@libmount-0__2.32.1-41.el8.x86_64//rpm",
        "@libnghttp2-0__1.33.0-3.el8_2.1.x86_64//rpm",
        "@libnl3-0__3.7.0-1.el8.x86_64//rpm",
        "@libnsl2-0__1.2.0-2.20180605git4a062cf.el8.x86_64//rpm",
        "@libogg-2__1.3.2-10.el8.x86_64//rpm",
        "@libpciaccess-0__0.14-1.el8.x86_64//rpm",
        "@libpmem-0__1.12.1-1.module_el8.8.0__plus__1231__plus__994ef5f7.x86_64//rpm",
        "@libpng-2__1.6.34-5.el8.x86_64//rpm",
        "@libpwquality-0__1.4.4-6.el8.x86_64//rpm",
        "@librados2-1__12.2.7-9.el8.x86_64//rpm",
        "@librbd1-1__12.2.7-9.el8.x86_64//rpm",
        "@librdmacm-0__44.0-2.el8.1.x86_64//rpm",
        "@libseccomp-0__2.5.2-1.el8.x86_64//rpm",
        "@libselinux-0__2.9-8.el8.x86_64//rpm",
        "@libsemanage-0__2.9-9.el8.x86_64//rpm",
        "@libsepol-0__2.9-3.el8.x86_64//rpm",
        "@libsigsegv-0__2.11-5.el8.x86_64//rpm",
        "@libsmartcols-0__2.32.1-41.el8.x86_64//rpm",
        "@libssh-0__0.9.6-6.el8.x86_64//rpm",
        "@libssh-config-0__0.9.6-6.el8.x86_64//rpm",
        "@libstdc__plus____plus__-0__8.5.0-19.el8.x86_64//rpm",
        "@libtasn1-0__4.13-4.el8.x86_64//rpm",
        "@libthai-0__0.1.27-2.el8.x86_64//rpm",
        "@libtheora-1__1.1.1-21.el8.x86_64//rpm",
        "@libtirpc-0__1.1.4-8.el8.x86_64//rpm",
        "@libunistring-0__0.9.9-3.el8.x86_64//rpm",
        "@libusbx-0__1.0.23-4.el8.x86_64//rpm",
        "@libutempter-0__1.1.6-14.el8.x86_64//rpm",
        "@libuuid-0__2.32.1-41.el8.x86_64//rpm",
        "@libverto-0__0.3.2-2.el8.x86_64//rpm",
        "@libvisual-1__0.4.0-25.el8.x86_64//rpm",
        "@libvorbis-1__1.3.6-2.el8.x86_64//rpm",
        "@libwayland-client-0__1.21.0-1.el8.x86_64//rpm",
        "@libwayland-cursor-0__1.21.0-1.el8.x86_64//rpm",
        "@libwayland-egl-0__1.21.0-1.el8.x86_64//rpm",
        "@libwayland-server-0__1.21.0-1.el8.x86_64//rpm",
        "@libxcb-0__1.13.1-1.el8.x86_64//rpm",
        "@libxcrypt-0__4.1.1-6.el8.x86_64//rpm",
        "@libxkbcommon-0__0.9.1-1.el8.x86_64//rpm",
        "@libxml2-0__2.9.7-16.el8.x86_64//rpm",
        "@libxshmfence-0__1.3-2.el8.x86_64//rpm",
        "@libzstd-0__1.4.4-1.el8.x86_64//rpm",
        "@llvm-libs-0__15.0.7-1.module_el8.8.0__plus__1258__plus__af79b238.x86_64//rpm",
        "@lz4-libs-0__1.8.3-3.el8_4.x86_64//rpm",
        "@lzo-0__2.08-14.el8.x86_64//rpm",
        "@mesa-dri-drivers-0__22.3.0-2.el8.x86_64//rpm",
        "@mesa-filesystem-0__22.3.0-2.el8.x86_64//rpm",
        "@mesa-libEGL-0__22.3.0-2.el8.x86_64//rpm",
        "@mesa-libGL-0__22.3.0-2.el8.x86_64//rpm",
        "@mesa-libgbm-0__22.3.0-2.el8.x86_64//rpm",
        "@mesa-libglapi-0__22.3.0-2.el8.x86_64//rpm",
        "@mpfr-0__3.1.6-1.el8.x86_64//rpm",
        "@ncurses-base-0__6.1-9.20180224.el8.x86_64//rpm",
        "@ncurses-libs-0__6.1-9.20180224.el8.x86_64//rpm",
        "@ndctl-libs-0__71.1-4.el8.x86_64//rpm",
        "@nettle-0__3.4.1-7.el8.x86_64//rpm",
        "@nspr-0__4.34.0-3.el8.x86_64//rpm",
        "@nss-0__3.79.0-11.el8.x86_64//rpm",
        "@nss-softokn-0__3.79.0-11.el8.x86_64//rpm",
        "@nss-softokn-freebl-0__3.79.0-11.el8.x86_64//rpm",
        "@nss-sysinit-0__3.79.0-11.el8.x86_64//rpm",
        "@nss-util-0__3.79.0-11.el8.x86_64//rpm",
        "@numactl-libs-0__2.0.12-13.el8.x86_64//rpm",
        "@openssl-libs-1__1.1.1k-9.el8.x86_64//rpm",
        "@opus-0__1.3-0.4.beta.el8.x86_64//rpm",
        "@orc-0__0.4.28-3.el8.x86_64//rpm",
        "@p11-kit-0__0.23.22-1.el8.x86_64//rpm",
        "@p11-kit-trust-0__0.23.22-1.el8.x86_64//rpm",
        "@pam-0__1.3.1-25.el8.x86_64//rpm",
        "@pango-0__1.42.4-8.el8.x86_64//rpm",
        "@pcre-0__8.42-6.el8.x86_64//rpm",
        "@pcre2-0__10.32-3.el8.x86_64//rpm",
        "@pixman-0__0.38.4-2.el8.x86_64//rpm",
        "@platform-python-0__3.6.8-51.el8.x86_64//rpm",
        "@platform-python-setuptools-0__39.2.0-7.el8.x86_64//rpm",
        "@popt-0__1.18-1.el8.x86_64//rpm",
        "@python3-libs-0__3.6.8-51.el8.x86_64//rpm",
        "@python3-pip-wheel-0__9.0.3-22.el8.x86_64//rpm",
        "@python3-setuptools-wheel-0__39.2.0-7.el8.x86_64//rpm",
        "@qemu-img-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-block-curl-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-block-gluster-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-block-iscsi-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-block-rbd-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-block-ssh-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-common-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-core-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-docs-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-hw-usbredir-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-ui-opengl-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@qemu-kvm-ui-spice-15__6.2.0-28.module_el8.8.0__plus__1257__plus__0c3374ae.x86_64//rpm",
        "@readline-0__7.0-10.el8.x86_64//rpm",
        "@seabios-bin-0__1.16.0-3.module_el8.7.0__plus__1218__plus__f626c2ff.x86_64//rpm",
        "@seavgabios-bin-0__1.16.0-3.module_el8.7.0__plus__1218__plus__f626c2ff.x86_64//rpm",
        "@sed-0__4.5-5.el8.x86_64//rpm",
        "@setup-0__2.12.2-9.el8.x86_64//rpm",
        "@sgabios-bin-1__0.20170427git-3.module_el8.6.0__plus__983__plus__a7505f3f.x86_64//rpm",
        "@shadow-utils-2__4.6-17.el8.x86_64//rpm",
        "@snappy-0__1.1.8-3.el8.x86_64//rpm",
        "@spice-server-0__0.14.3-4.el8.x86_64//rpm",
        "@sqlite-libs-0__3.26.0-17.el8.x86_64//rpm",
        "@systemd-0__239-75.el8.x86_64//rpm",
        "@systemd-libs-0__239-75.el8.x86_64//rpm",
        "@systemd-pam-0__239-75.el8.x86_64//rpm",
        "@tzdata-0__2023c-1.el8.x86_64//rpm",
        "@usbredir-0__0.12.0-4.el8.x86_64//rpm",
        "@userspace-rcu-0__0.10.1-4.el8.x86_64//rpm",
        "@util-linux-0__2.32.1-41.el8.x86_64//rpm",
        "@xkeyboard-config-0__2.28-1.el8.x86_64//rpm",
        "@xml-common-0__0.6.3-50.el8.x86_64//rpm",
        "@xz-libs-0__5.2.4-4.el8.x86_64//rpm",
        "@zlib-0__1.2.11-21.el8.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)
